--- a/index.html
+++ b/index.html
@@ -398,18 +398,18 @@
                     <div class="social-links">
                         <h4>Follow My Work</h4>
                         <div class="social-icons">
-                            <a href="#" class="social-icon" aria-label="Instagram">
+                          <!--  <a href="#" class="social-icon" aria-label="Instagram">
                                 <i class="fab fa-instagram"></i>
-                            </a>
+                            </a> -->
                             <a href="https://www.facebook.com/michellevicentehmua" class="social-icon" aria-label="Facebook">
                                 <i class="fab fa-facebook-f"></i>
                             </a>
-                            <a href="#" class="social-icon" aria-label="Pinterest">
+                           <!-- <a href="#" class="social-icon" aria-label="Pinterest">
                                 <i class="fab fa-pinterest-p"></i>
-                            </a>
-                            <a href="#" class="social-icon" aria-label="TikTok">
+                            </a>-->
+                            <!--<a href="#" class="social-icon" aria-label="TikTok">
                                 <i class="fab fa-tiktok"></i>
-                            </a>
+                            </a> -->
                         </div>
                     </div>
                 </div>
