--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
                 </div>
             </div>
         </div>
-        <div class="hero-scroll-indicator">
+      <!--  <div class="hero-scroll-indicator">
             <div class="scroll-line"></div>
             <p>Scroll to explore</p>
-        </div>
+        </div> -->
     </section>
 
     <!-- About Section -->
@@ -493,3 +493,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
