--- a/gallery.html
+++ b/gallery.html
@@ -82,10 +82,10 @@
                 </div>
             </div>
         </div>
-        <div class="hero-scroll-indicator">
+       <!-- <div class="hero-scroll-indicator">
             <div class="scroll-line"></div>
             <p>Scroll to explore</p>
-        </div>
+        </div> -->
     </section>
 
     <!-- Gallery Section -->
@@ -95,8 +95,8 @@
                 <button class="filter-btn active" data-filter="all">All Work</button>
                 <button class="filter-btn" data-filter="bridal">Bridal</button>
                 <button class="filter-btn" data-filter="events">Special Events</button>
-                <button class="filter-btn" data-filter="photoshoot">Photoshoots</button>
-                <button class="filter-btn" data-filter="occasion">Special Occasions</button>
+                <!--<button class="filter-btn" data-filter="photoshoot">Photoshoots</button> -->
+               <!-- <button class="filter-btn" data-filter="occasion">Special Occasions</button> -->
             </div>
             
             <div class="gallery-grid" id="galleryGrid">
