--- a/gallery.html
+++ b/gallery.html
@@ -104,7 +104,7 @@
             </div>
             
             <!-- UPDATED: Realistic freelance makeup artist statistics -->
-            <div class="gallery-stats">
+           <!-- <div class="gallery-stats">
                 <div class="stat-item">
                     <div class="stat-icon">
                         <i class="fas fa-heart"></i>
@@ -133,7 +133,7 @@
                     <h3>10+</h3>
                     <p>Years Experience</p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 
